--- a/Lista_3/q1.tex
+++ b/Lista_3/q1.tex
@@ -18,7 +18,7 @@ Considere um grafo não direcionado $G = (V,E)$ com peso nas arestas, tal que $w
 
     Assim, temos que a soma das probabilidades de transição do estado $i$ para todos os outros estados $j$ é igual a 1, o que caracteriza uma matriz de transição de probabilidade. 
     
-    Portanto, \underline{o passeio aleatório enviesado induz uma cadeia de Markov}.
+    Portanto, o passeio aleatório enviesado \underline{induz uma cadeia de Markov}.
         
     \end{resposta}
     \item Determine a distribuição estacionária desta cadeia de Markov (dica: use o método da inspeção).
