--- a/Lista_3/q3.tex
+++ b/Lista_3/q3.tex
@@ -3,9 +3,24 @@ Considere um processo estocástico que inicia no estado $1$ e a cada instante de
 
 \begin{enumerate}
     \item Construa a cadeia de Markov deste processo mostrando a matriz de transição de probabilidade em função de $p$.
+    \begin{resposta}
+
+    \end{resposta}
     \item Determine numericamente o vão espectral da cadeia de Markov para cada valor de $p$.
+    \begin{resposta}
+
+    \end{resposta}
     \item Determine numericamente a distribuição estacionária para cada valor de $p$, e indique o estado de menor probabilidade.
+    \begin{resposta}
+
+    \end{resposta}
     \item Utilizando os dados acima, determine um limitante inferior e superior para o tempo de mistura quando $\epsilon = 10^{-6}$ para cada valor de $p$.
+    \begin{resposta}
+
+    \end{resposta}
     \item O que você pode concluir sobre a influência de $p$ no tempo de mistura?
+    \begin{resposta}
+
+    \end{resposta}
 \end{enumerate}
 
