--- a/Lista_3/q4.tex
+++ b/Lista_3/q4.tex
@@ -3,6 +3,15 @@ Considere uma cadeia de Markov cujo espaço de estados é um láttice de duas di
 
 \begin{enumerate}
     \item Construa um simulador para essa cadeia de Markov.
+    \begin{resposta}
+
+    \end{resposta}
     \item Utilize o simulador para estimar a distribuição estacionária da origem (estado $(1,1)$), ou seja $\pi_{1,1}$, para cada valor de $p$. Dica: utilize os tempos de retorno!
+    \begin{resposta}
+
+    \end{resposta}
     \item Seja $d(t)$ o valor esperado da distância (de Manhattan) entre $X_t$ (o estado no tempo $t$) e a origem. Utilize o simulador para estimar $d(t)$ para $t \in \{10, 100, 1000\}$, para cada valor de $p$. O que você pode concluir?
+    \begin{resposta}
+
+    \end{resposta}
 \end{enumerate}
